--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
 
 <ul>
-  <img src="logo.png" alt="SwitchMe Logo"style="margin-left: 190px">
+  <img src="Mylogo.png" alt="SwitchMe Logo"style="margin-left: 190px">
   <li style="border: solid 1px; border-color: white;border-radius: 5px; margin-left : 20px;margin-right: 20px;"><a href="#login">Login</a></li>
   <li style="border: solid 1px; border-color: white;border-radius: 5px"><a href="signup.html" target="__self" >Signup</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#blog">Blog</a></li>
   <li><a href="#ourservices">Our Services</a></li>
-  <li><a href="#home">How Switching Works</a></li>
+  <li><a href="#home">About Us</a></li>
 </ul>
 
 <div class="container">
-  <img src="bg.jpg" alt="SwitchMe" style="width:60%">
+  <img src="http://www.esolutions.co.zw/sites/default/files/bank-finance.jpg" alt="SwitchMe" style="width:60%">
   <div class="centered">Home Loans Cheaper, Interest Rate Cut</div>
   <div class="data"><br><p>Change in government policy and RBI rate cuts are prompting</p>
   	<p>banks to slash their home loan interests.</p>
