--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <ul>
-  <img src="Mylogo.png" alt="SwitchMe Logo"style="margin-left: 190px">
+  <img src="Mylogo.jpg" alt="SwitchMe Logo"style="margin-left: 190px">
   <li style="border: solid 1px; border-color: white;border-radius: 5px; margin-left : 20px;margin-right: 20px;"><a href="#login">Login</a></li>
   <li style="border: solid 1px; border-color: white;border-radius: 5px"><a href="signup.html" target="__self" >Signup</a></li>
   <li><a href="#contact">Contact</a></li>
